# ComfyUI_InstantID

./: CrossAttentionPatch.py  InstantID.py  README.md  README.zh-CN.md  __init__.py  instantID.json  pyproject.toml  requirements.txt  utils.py
.github/: FUNDING.yml
.github/workflows/: publish.yml
examples/: InstantID_IPAdapter.json  InstantID_basic.json  InstantID_default.json  InstantID_depth.json  InstantID_multi_id.json  InstantID_posed.json
